force-app/main/default/objects/Score_Batch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Advancement Batch Jobs that create Score records</description>
    <fields>
        <fullName>Attended_Description__c</fullName>
        <description>Description to be applied for Score records created against Campaign Members that have attended</description>
        <label>Attended Description</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Expiry__c</fullName>
        <description>Months until expiry for Score records created against Campaign Members that have attended</description>
        <label>Attended Expiry</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended_Score__c</fullName>
        <description>Score value to be applied for Campaign Members that have attended</description>
        <label>Attended Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Attended_Description__c</fullName>
        <description>Description to be applied for Score records created against Campaign Members that have attended premium events</description>
        <label>Premium Attended Description</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Attended_Expiry__c</fullName>
        <description>Months until expiry for Score records created against Campaign Members that have attended premium events</description>
        <label>Premium Attended Expiry</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Attended_Score__c</fullName>
        <description>Score value to be applied for Campaign Members that have attended premium events</description>
        <label>Premium Attended Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Description__c</fullName>
        <description>Description to be applied for Score records created against Campaign Members that have registered</description>
        <label>Registration Description</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Expiry__c</fullName>
        <description>Months until expiry for Score records created against Campaign Members that have registered</description>
        <label>Registration Expiry</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Score__c</fullName>
        <description>Score value to be applied for Campaign Members that have registered</description>
        <label>Registration Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Score Batch Settings</label>
</CustomObject>